Changed semantics of thread pools.

--- a/src/BUILD
+++ b/src/BUILD
@@ -5,6 +5,7 @@ cc_library(
         "map_reduce.hpp",
     ],
     deps = [
+        "//src/thread:pool",
         "//src/internal:map",
         "//src/internal:reduce",
         "//src/io:io"
