Added sharded sinks and integrated sharded sinks/sources to shuffle intermediate step.

--- a/src/BUILD
+++ b/src/BUILD
@@ -20,5 +20,9 @@ cc_binary(
     deps = [
         ":map_reduce",
         "//src/io:io",
+    ],
+    copts = [
+        "-std=c++2a",
+        "-g",
     ]
 )
